--- a/docs/wut_thesis/tex/1-wstep.tex
+++ b/docs/wut_thesis/tex/1-wstep.tex
@@ -18,7 +18,7 @@ celów, stawianych od początku jego przygotowywania:
     \item Redukcja zużywanej energii - w praktyce często zdarza się, że po zakończeniu 
     pracy zostawiane są włączone światła na całą noc. Innym przykładem może być 
     sytuacja, w której pomieszczenie jest ogrzewane, mimo iż nikt z niego nie korzysta. 
-    Przy wsparciu aplikacji będzie możliwe zapobieganie takim wydarzeniom, co w 
+    Przy wsparciu systemu będzie możliwe zapobieganie takim wydarzeniom, co w 
     konsekwencji ograniczy zużycie energii
 \end{enumerate}
 
@@ -109,5 +109,5 @@ poprawność działania systemu, przedstawionych szczegółowo w rozdziale 7.
 Treść rozdziału 8. zawiera szczegóły implementacyjne dotyczące dokonywania pomiarów
 oraz przesyłania ich w taki sposób, aby wiadomości były zrozumiałe dla systemu.
 Kolejny rozdział przybliża zasady działania oraz możliwości oferowane przez konteneryzację
-systemu. Ostatni rozdział stanowi podsumowanie dokonań oraz prezentuje możliwe
+systemu. Rozdział 10. stanowi podsumowanie dokonań. Ostatni rozdział prezentuje możliwe
 dalsze kierunki rozwoju pracy.
