--- a/docs/wut_thesis/tex/2-istniejace-rozwiazania.tex
+++ b/docs/wut_thesis/tex/2-istniejace-rozwiazania.tex
@@ -5,7 +5,7 @@ parametry danego pomieszczenia, przesyłać je na platformy chmurowe i analizowa
 \cite{sharp2022}. Różnica między tym produktem a rozwiązaniem proponowanym w niniejszej pracy 
 polega na tym, że w rozwiązaniu firmy Sharp czujniki są wbudowane w monitor służący 
 jako centrum telekonferencyjne. W ten sposób wykonywane pomiary stają się raczej 
-dodatkiem do monitora, niż główną rolą wstawienia urządzenia do konkretnej sali. 
+dodatkiem do monitora, niż głównym powodem wstawienia urządzenia do konkretnej sali. 
 W konsekwencji, wykonywanie pomiarów w wielu salach wiązałoby się z koniecznością 
 zakupu drogiego monitora dla każdej z nich. Proponowane w tej pracy rozwiązanie zawiera 
 jedynie zestaw czujników zintegrowanych z systemem, bez innych dodatków, co 
