--- a/docs/wut_thesis/tex/4-metodologia.tex
+++ b/docs/wut_thesis/tex/4-metodologia.tex
@@ -1,11 +1,18 @@
 \clearpage
 \section{Metodyka}
+Treść sekcji zawiera zestawienie dwóch konkurencyjnych architektur wykorzystywanych do
+projektowania systemów informatycznych: monolitycznej oraz opartej na mikrousługach.
 
 Największy nacisk w trakcie tworzenia pracy został położony na łatwość wdrożenia. 
 W poniższych podrozdziałach przedstawiono kwestie, które należy wziąć pod uwagę
 podczas projektowania rozwiązania, które ma tę cechę spełniać.
 
 \subsection{Architektura systemu}
+Sekcja przedstawia porównanie architektury monolitycznej oraz mikrousługowej.
+Podrozdziały 4.1.1 - 4.1.4 przedstawiają zagadnienia, na które należy zwrócić
+uwagę, przygotowując system utworzony z wielu modułów usługowych. W podrozdziale 4.1.5
+spisano wszystkie moduły, które składają się na zaprojektowany w ramach niniejszej pracy 
+system.
 
 Wśród możliwych architektur systemów można wyłonić dwie najważniejsze gałęzie: 
 architektura monolityczna lub oparta na mikrousługach, które są małymi, niezależnymi 
