--- a/docs/wut_thesis/tex/7-testy.tex
+++ b/docs/wut_thesis/tex/7-testy.tex
@@ -1,5 +1,12 @@
 \newpage
 \section{Testy}
+Sekcja opisuje wykorzystane rodzaje testów oraz przedstawia przypadki ich użycia.
+Podrozdział 7.1 prezentuje szczegóły dotyczące testów jednostkowych oraz
+przedstawia argumenty przekonujące do zapewnienia dużej liczby tego rodzaju testów.
+W podrozdziale 7.2 opisano rolę testów integracyjnych. Poprawność funkcji biznesowych
+można sprawdzić dzięki testom typu end-2-end, przybliżonych w podrozdziale 7.3.
+Proces przeprowadzania testów można zautomatyzować przy pomocy narzędzi opisanych
+w podrozdziale 7.4
 
 Dobrą praktyką pozwalającą znacznie ograniczyć występowanie błędów w ostatecznej 
 wersji systemu jest przygotowanie testów sprawdzających działanie poszczególnych 
