--- a/docs/wut_thesis/tex/8-pomiary.tex
+++ b/docs/wut_thesis/tex/8-pomiary.tex
@@ -1,7 +1,11 @@
 \newpage
 \section{Pomiary}
+Treść sekcji zawiera opis czujników oraz innych elementów elektronicznych
+wykorzystanych do zbudowania zestawu wykonującego pomiary temperatury
+oraz natężenia światła. Podrozdział 8.1 przedstawia szczegóły implementacyjne
+dotyczące utworzonego oprogramowania sterującego wykonywaniem pomiarów.
 
-W ramach pracy inżynierskiej przygotowano zestaw pomiarowy, który 
+W ramach niniejszej pracy przygotowano zestaw pomiarowy, który 
 w regularnych odstępach czasu bada aktualną wartość temperatury oraz
 natężenia światła. Zestaw został złożony z następujących elementów:
 
