DAGAIR-54 Update db models

--- a/docs/wut_thesis/main.tex
+++ b/docs/wut_thesis/main.tex
@@ -32,7 +32,7 @@
 \EngineerThesis % Dla pracy inżynierskiej mamy \EngineerThesis
 \instytut{Telekomunikacji}
 \kierunek{Telekomunikacja}
-\specjalnosc{Teleinformatyka i Zarządzanie}
+\specjalnosc{Teleinformatyka i Zarządzanie w Telekomunikacji}
 \title{
     System do zarządzania warunkami \\
     technicznymi w pomieszczeniach biurowych \\
@@ -139,7 +139,7 @@ whether the conditions they set are in line with the actual measurements.
 %--------------------------------------
 \cleardoublepage  % Zaczynamy od nieparzystej strony
 \pagestyle{plain}
-\makeauthorship
+%\makeauthorship
 
 %--------------------------------------
 % Spis treści
@@ -194,11 +194,9 @@ whether the conditions they set are in line with the actual measurements.
 \acronym{ADS}{Addresses Data Service}
 \acronym{EA}{Employee Application}
 \acronym{EAS}{Employee Application Service}
-\acronym{EiTI}{Wydział Elektroniki i Technik Informacyjnych}
 \acronym{FDS}{Facilities Data Service}
 \acronym{PDS}{Policies Data Service}
 \acronym{PPS}{Policy Processing Service}
-\acronym{PW}{Politechnika Warszawska}
 \acronym{SDS}{Sensors Data Service}
 \acronym{SSDS}{Sensor State Data Service}
 \acronym{SSHDS}{Sensor State History Data Service}
