--- a/docs/wut_thesis/tex/10-podsumowanie.tex
+++ b/docs/wut_thesis/tex/10-podsumowanie.tex
@@ -17,8 +17,8 @@ W ramach niniejszej pracy udało się osiągnąć następujące rezultaty:
     dalej
     \item Skonfigurowano środowisko na platformie Azure, dzięki czemu system
     był publicznie dostępny w internecie. Ze względu na znaczące koszty utrzymania 
-    środowiska generowało zdecydowano się na jego usunięcie. Możliwe jest jednak
-    jego szybkie przywrócenie do pełnej funkcjonalności.
+    środowiska zdecydowano się na jego usunięcie. Możliwe jest jednak
+    szybkie przywrócenie do pełnej funkcjonalności.
 \end{itemize}
 
 System do zarządzania warunkami technicznymi w pomieszczeniach biurowych jest publicznie
