--- a/docs/wut_thesis/tex/3-zalozenia.tex
+++ b/docs/wut_thesis/tex/3-zalozenia.tex
@@ -2,7 +2,7 @@
 \section{Założenia}
 W tej sekcji przedstawiono główne założenia dotyczące rozwoju pracy, a także
 przeprowadzono przegląd prac naukowych estymujących optymalną wartość temperatury
-oraz natężęnia światła w pomieszczeniach biurowych.
+oraz natężenia światła w pomieszczeniach biurowych.
 
 Funkcjonalność i architektura systemu została zaprojektowana w oparciu o kilka istotnych 
 założeń:
