--- a/docs/wut_thesis/tex/5-przechowywanie-danych.tex
+++ b/docs/wut_thesis/tex/5-przechowywanie-danych.tex
@@ -31,7 +31,7 @@ skonfigurowanego API (ang. \textit{Application Programming Interface}) \cite{ric
 sprzężenia między mikroserwisami. W konsekwencji należy utworzyć oddzielne modele 
 danych, zwane schematami, które mogą być zarządzane przez pojedynczy mikroserwis.
 
-W ramach utworzonego serwera bazodanowego zostały wdrożone następujące schematy:
+W ramach utworzonego serwera bazodanowego zostały wdrożone schematy opisane w tabeli \ref{tab:schematy-bazodanowe}:
 
     \begin{xltabular}{1\textwidth} { 
         | >{\raggedright\arraybackslash}c        
