--- a/docs/wut_thesis/tex/6-komunikacja-miedzy-serwisami.tex
+++ b/docs/wut_thesis/tex/6-komunikacja-miedzy-serwisami.tex
@@ -231,7 +231,7 @@ Każda z oferowanych usług zawiera:
 
 \subsubsection{Usługi udostępniane przez mikrousługę danych adresów}
 
-ADS oferuje usługi zwracające szczegółowe dane dotyczące adresów oraz pozwalających
+ADS oferuje usługi zwracające szczegółowe dane dotyczące adresów oraz pozwalające
 na ich manipulację.
 
 \begin{xltabular}{1\textwidth} { 
@@ -467,8 +467,7 @@ o organizacjach, oddziałach oraz pomieszczeniach.
 
 \subsubsection{Usługi udostępniane przez mikrousługę danych reguł}
 Usługi oferowane przez PDS pozwalają na zwracanie informacji dotyczących 
-istniejących reguł, a także dodawanie nowych rekordów o różnym poziomie
-priorytetu. 
+istniejących reguł, a także dodawanie nowych rekordów o różnych typach reguł. 
     
 \begin{xltabular}{1\textwidth} { 
         | c    
