--- a/docs/wut_thesis/tex/8-pomiary.tex
+++ b/docs/wut_thesis/tex/8-pomiary.tex
@@ -36,7 +36,7 @@ Jego rozdzielczość wynosi 0.1\degree C, a dokładność 2\degree C.
 
 \subsection{Oprogramowanie mikrokontrolera}
 
-Do rozwoju oprogramowania do mikrokontrolera WEMOSC wykorzystano narzędzie 
+Do rozwoju oprogramowania do mikrokontrolera WEMOS wykorzystano narzędzie 
 Arduino IDE, będące rozbudowanym edytorem pozwalającym na kompilację,
 przesyłanie plików wykonywalnych na płytkę przy pomocy kabla USB oraz
 debugowanie i podgląd logów produkowanych przez mikrokontroler w czasie 
